--- a/lec1/index.html
+++ b/lec1/index.html
@@ -16,7 +16,7 @@
         <span id="hi2" data-test="hello">Hi</span>
         <span id="bye2" data-test="goodbye">Bye</span>
     </div>
-    
+    <div></div>
     <script src="index.js">
         
     </script>
